<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailActivity"
    android:id="@+id/viewReferralDetailsFragment"
    app:layout_behavior="@string/MoveUpBehaviour"
    >

    <RelativeLayout
        android:id="@+id/details_full_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.ToolbarTheme"
            app:contentInsetLeft="16dp"
            app:contentInsetStart="16dp"
            >

            <RelativeLayout
                android:id="@+id/top_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/viewPatientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/gapBetweenNameandAge"
                    android:layout_toStartOf="@id/viewPatientNHI"
                    android:hint="@string/hint_patient_name"
                    android:ellipsize="end"
                    android:textColor="@color/white"
                    android:textColorHint="@color/toolbar_hint_colour"
                    android:background="@android:color/transparent"
                    />

                <TextView
                    android:id="@+id/viewPatientNHI"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLength="7"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hint_patient_NHI"
                    android:textColor="@color/white"
                    android:textColorHint="@color/toolbar_hint_colour"
                    android:background="@android:color/transparent"
                    android:layout_marginBottom="@dimen/gapBetweenNameandAge"
                    />

                <TextView
                    android:id="@+id/view_age_sex"
                    android:layout_width="@dimen/sizeofAgeSex"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_below="@id/viewPatientName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/toolbar_hint_colour"
                    android:background="@android:color/transparent"
                    android:layout_marginBottom="15dp"
                    />

                <TextView
                    android:id="@+id/viewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/view_age_sex"
                    android:layout_below="@id/viewPatientName"
                    android:ems="5"
                    android:layout_marginStart="25dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/toolbar_hint_colour"
                    android:background="@android:color/transparent"
                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:id="@+id/ScrollViewDetailsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_toolbar"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_Details_Relative_Layout">

                <ImageView
                    android:id="@+id/viewNoteIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_priority_high"
                    />

                <TextView
                    android:id="@+id/view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/viewNoteIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:ems="7"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:clickable="true"
                    android:textAppearance="@android:style/TextAppearance.Widget.EditText"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/view_date"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:ems="4"
                    android:background="@android:color/transparent"
                    android:textAppearance="@android:style/Widget.EditText"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/referrernameheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="12"
                    android:layout_below="@id/viewNoteIcon"
                    android:textSize="12sp"
                    android:text="@string/referred_by"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/viewReferrerDetails"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/referrernameheader"
                    android:layout_alignStart="@+id/referrernameheader"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="3dp"
                    android:textSize="15sp"
                    android:textAppearance="@android:style/Widget.Material.EditText"
                    />

                <TextView
                    android:id="@+id/referrerContactHeader"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/referrernameheader"
                    android:layout_below="@id/viewNoteIcon"
                    android:textSize="12sp"
                    android:text="@string/referrer_contact_details"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/viewReferrerContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/referrerContactHeader"
                    android:layout_toEndOf="@id/referrernameheader"
                    android:textSize="15sp"
                    android:layout_marginTop="3dp"
                    android:autoLink="phone"
                    android:textColor="@android:color/holo_blue_bright"
                    />

                <TextView
                    android:id="@+id/detailsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailsHeader"
                    android:layout_below="@+id/viewReferrerDetails"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@android:style/Widget.EditText"
                    />

                <TextView
                    android:id="@+id/viewDetails"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detailsHeader"
                    android:textSize="@dimen/detailsViewDetailsTextSize"
                    android:textColor="@color/detailsViewDetailsText"
                    android:gravity="top"
                    android:textAppearance="@android:style/Widget.EditText"
                    />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/MoveUpBehaviour"
        android:layout_gravity="bottom"
        android:id="@+id/bottom_button_coordinator_layout">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_job_from_referral_details"
                android:textColor="@color/colorPrimary"
                android:id="@+id/create_new_job_for_patient"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/number_of_other_type_of_note"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:layout_behavior="@string/MoveUpBehaviour"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/minifab"
                android:id="@+id/number_of_other_type_of_note"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                app:layout_behavior="@string/MoveUpBehaviour"/>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/edit_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_edit"
        app:fab_size="mini"
        app:layout_anchor="@id/view_toolbar"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@color/minifab"
        app:fab_colorNormal="@color/minifab"
        app:fab_colorPressed="@color/minifabDark"
        android:clickable="true"/>


    <!--<com.github.clans.fab.FloatingActionButton-->
        <!--android:id="@+id/referral_add_job"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/fab_add"-->
        <!--android:tint="@android:color/white"-->
        <!--android:clickable="true"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:fab_colorNormal="@color/colorPrimaryDark"-->
        <!--app:fab_colorPressed="@color/colorPrimary"-->
        <!--app:fab_colorRipple="@android:color/transparent"-->
        <!--android:layout_gravity="bottom|right"-->
        <!--/>-->

</android.support.design.widget.CoordinatorLayout>